kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authy
  namespace: authy
spec:
  selector:
    matchLabels:
      app: authy
  replicas: 1
  template:
    metadata:
      labels:
        app: authy
    spec:
      containers:
      - name: authy
        image: !IMAGE!
        ports:
        - containerPort: 4000
