kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authy-service
  namespace: authy
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: http
      name: http
  selector:
    app: authy
  type: ClusterIP
